--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,12 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
-- export TRAVIS_COOKBOOKS_BRANCH=meat-java-whackamole
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf @ ; popd
+- git clone --branch="meat-jdk-tests" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 3a0caa0b5b48 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="meat-jdk-tests"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 addons:
   artifacts:
