--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 22b99677fb3a ; popd
+- git clone --branch="meat-dpkg-info-dump" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 71f85eeef2c1 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="meat-dpkg-info-dump"
 - "./packer-templates/bin/packer-build-script internal-bastion"
 addons:
   artifacts:
