--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,14 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
+- export TRAVIS_COOKBOOKS_BRANCH=meat-intern-riak
 install:
-- git clone --branch="meat-test-redis" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf d8d072de2985 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/379/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-test-redis"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/379/merge"
 - "./packer-templates/bin/packer-build-script ci-garnet"
 addons:
   artifacts:
