--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,11 @@ before_install:
   docker restart ; fi
 - export TRAVIS_COOKBOOKS_BRANCH=meat-rvm-servers
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/382/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="meat-precise-x11" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 49c23c4f59c1 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/382/merge"
+- export PACKER_TEMPLATES_BRANCH="meat-precise-x11"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 addons:
   artifacts:
