--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-precise-standard" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf b8f991db5b03 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/389/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-precise-standard"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/389/merge"
 - "./packer-templates/bin/packer-build-script ci-amethyst"
 - touch ./packer-templates/tmp/image-metadata-empty.tar.bz2
 addons:
