--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 582aa78f15e5 ; popd
+- git clone --branch="meat-minimize-touchup" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 987fc247cbde ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="meat-minimize-touchup"
 - "./packer-templates/bin/packer-build-script tmate-edge"
 - touch ./packer-templates/tmp/image-metadata-empty.tar.bz2
 addons:
