--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,18 @@ dist: trusty
 group: edge
 sudo: true
 before_install:
-- if [[ "x${BUILDER}" = "xdocker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
+- if [[ "${BUILDER}" = "docker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
   purge -o Dpkg::Options::="--force-confnew" -yqq docker-engine ; sudo apt-get install
   -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-minimize-touchup" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 987fc247cbde ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/396/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-minimize-touchup"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/396/merge"
 - "./packer-templates/bin/packer-build-script tmate-edge"
 - touch ./packer-templates/tmp/image-metadata-empty.tar.bz2
 addons:
