--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/380/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="meat-dpkg-baseline" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 23ea584c0313 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/380/merge"
+- export PACKER_TEMPLATES_BRANCH="meat-dpkg-baseline"
 - "./packer-templates/bin/packer-build-script ci-connie"
 - touch ./packer-templates/tmp/image-metadata-empty.tar.bz2
 addons:
