--- a/.travis.yml
+++ b/.travis.yml
@@ -4,22 +4,24 @@ dist: trusty
 group: edge
 sudo: true
 before_install:
-- if [[ "x${BUILDER}" = "xdocker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
+- if [[ "${BUILDER}" = "docker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
   purge -o Dpkg::Options::="--force-confnew" -yqq docker-engine ; sudo apt-get install
   -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-trusty-haskell" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 46e320c7bab2 ; popd
+- git clone --branch="meat-dpkg-baseline" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 23ea584c0313 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-trusty-haskell"
+- export PACKER_TEMPLATES_BRANCH="meat-dpkg-baseline"
 - "./packer-templates/bin/packer-build-script internal-nat"
+- touch ./packer-templates/tmp/image-metadata-empty.tar.bz2
 addons:
   artifacts:
     paths:
-    - "./packer-templates/tmp/image-metadata-$(cat ./packer-templates/tmp/internal-nat/latest-image-name).tar.bz2"
+    - "./packer-templates/tmp/image-metadata-$(cat ./packer-templates/tmp/internal-nat/latest-image-name
+      || echo empty).tar.bz2"
     target_paths:
     - travis-ci/packer-templates/internal-nat/$BUILDER
 env:
