--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/398/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="meat-use-travis-build-environment-nodejs" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf ea0c7214abba ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/398/merge"
+- export PACKER_TEMPLATES_BRANCH="meat-use-travis-build-environment-nodejs"
 - "./packer-templates/bin/packer-build-script ci-sugilite"
 - touch ./packer-templates/tmp/image-metadata-empty.tar.bz2
 addons:
