--- a/.travis.yml
+++ b/.travis.yml
@@ -10,18 +10,21 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="meat-integrate-shfmt" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf ea07db289c55 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/402/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-integrate-shfmt"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/402/merge"
 - "./packer-templates/bin/packer-build-script ci-connie"
-- touch ./packer-templates/tmp/image-metadata-empty.tar.bz2
+- export PACKER_BUILD_IMAGE_NAME=$(cat ./packer-templates/tmp/ci-connie/latest-image-name
+  || echo empty)
+- touch ./packer-templates/tmp/image-metadata-$PACKER_BUILD_IMAGE_NAME.tar.bz2
+- cp -v ./packer-templates/tmp/image-metadata-$PACKER_BUILD_IMAGE_NAME.tar.bz2 ./image-metadata-$PACKER_BUILD_IMAGE_NAME.tar.bz2
 addons:
   artifacts:
     paths:
-    - "./packer-templates/tmp/image-metadata-$(cat ./packer-templates/tmp/ci-connie/latest-image-name
-      || echo empty).tar.bz2"
+    - image-metadata-$PACKER_BUILD_IMAGE_NAME.tar.bz2
     target_paths:
     - travis-ci/packer-templates/ci-connie/$BUILDER
 env:
