--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/402/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="meat-image-metadata-cleanup" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 0863aab057f7 ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/402/merge"
+- export PACKER_TEMPLATES_BRANCH="meat-image-metadata-cleanup"
 - "./packer-templates/bin/packer-build-script ci-connie"
 - export PACKER_BUILD_IMAGE_NAME=$(cat ./packer-templates/tmp/ci-connie/latest-image-name
   || echo empty)
