--- a/.travis.yml
+++ b/.travis.yml
@@ -9,21 +9,19 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
+- export TRAVIS_COOKBOOKS_BRANCH=meat-rename-postgresql
 install:
-- git clone --branch="meat-image-metadata-cleanup" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf e6a5d02eab3c ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/405/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-image-metadata-cleanup"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/405/merge"
 - "./packer-templates/bin/packer-build-script ci-sugilite"
-- export PACKER_BUILD_IMAGE_NAME=$(cat ./packer-templates/tmp/ci-sugilite/latest-image-name
-  || echo empty)
-- touch ./packer-templates/tmp/image-metadata-$PACKER_BUILD_IMAGE_NAME.tar.bz2
-- cp -v ./packer-templates/tmp/image-metadata-$PACKER_BUILD_IMAGE_NAME.tar.bz2 ./image-metadata-$PACKER_BUILD_IMAGE_NAME.tar.bz2
 addons:
   artifacts:
     paths:
-    - image-metadata-$PACKER_BUILD_IMAGE_NAME.tar.bz2
+    - image-metadata-$(cat .packer-build-image-name).tar.bz2
     target_paths:
     - travis-ci/packer-templates/ci-sugilite/$BUILDER
 env:
