--- a/.travis.yml
+++ b/.travis.yml
@@ -9,20 +9,18 @@ before_install:
   -o Dpkg::Options::="--force-confnew" -yqq docker-engine lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
-- export TRAVIS_COOKBOOKS_BRANCH=meat-shfmt
 install:
-- git clone --branch="meat-integrate-shfmt" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf f4064e162e59 ; popd
+- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git fetch origin +refs/pull/407/merge && git checkout
+  -qf FETCH_HEAD ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="meat-integrate-shfmt"
+- export PACKER_TEMPLATES_BRANCH="+refs/pull/407/merge"
 - "./packer-templates/bin/packer-build-script tmate-edge"
-- touch ./packer-templates/tmp/image-metadata-empty.tar.bz2
 addons:
   artifacts:
     paths:
-    - "./packer-templates/tmp/image-metadata-$(cat ./packer-templates/tmp/tmate-edge/latest-image-name
-      || echo empty).tar.bz2"
+    - image-metadata-$(cat .packer-build-image-name).tar.bz2
     target_paths:
     - travis-ci/packer-templates/tmate-edge/$BUILDER
 env:
